# VikingClaw

./: .gitignore  LICENSE  NOTICE  OpenClaw_OpenViking_ContextOS_Integration.md  OpenClaw_OpenViking_ContextOS_Integration_CN.md  OpenClaw_OpenViking_Integration_Review_2026-02-24.md  OpenClaw_OpenViking_Integration_Review_2026-02-24_CN.md  README.md  README.zh-CN.md
OpenViking-0.1.17/openviking/: async_client.py
OpenViking-0.1.17/openviking/client/: local.py
OpenViking-0.1.17/openviking/retrieve/: hierarchical_retriever.py  intent_analyzer.py
OpenViking-0.1.17/openviking/service/: session_service.py
OpenViking-0.1.17/openviking/session/: compressor.py  memory_deduplicator.py  session.py
OpenViking-0.1.17/openviking/storage/: local_fs.py  viking_fs.py  viking_vector_index_backend.py
OpenViking-0.1.17/openviking_cli/client/: base.py  http.py  sync_http.py
OpenViking-0.1.17/openviking_cli/utils/: uri.py
OpenViking-0.1.17/tests/: README.md  conftest.py
OpenViking-0.1.17/tests/cli/: conftest.py
OpenViking-0.1.17/tests/client/: test_file_operations.py  test_import_export.py
OpenViking-0.1.17/tests/engine/: CMakeLists.txt  test_index_engine.cpp
OpenViking-0.1.17/tests/integration/: conftest.py  test_quick_start_lite.py
OpenViking-0.1.17/tests/misc/: test_hierarchical_retriever_signal_bonus.py  test_intent_analyzer_signal_tokens.py  test_search_session_summary_compat.py  test_uri_utils.py  test_viking_vector_index_backend_uri_idempotency.py
OpenViking-0.1.17/tests/server/: test_api_content.py
OpenViking-0.1.17/tests/session/: test_memory_deduplicator.py
openclaw-2026.2.19/: .gitignore  package.json  tmp-debug-connect.ts  vitest.config.ts
openclaw-2026.2.19/.github/workflows/: ci.yml
openclaw-2026.2.19/docs/: ci.md
openclaw-2026.2.19/extensions/google-antigravity-auth/: index.ts
openclaw-2026.2.19/scripts/: openviking-phase7-gate.sh  test-parallel.mjs
openclaw-2026.2.19/scripts/repro/: openviking-outbox-restart-probe.ts
openclaw-2026.2.19/src/cli/: memory-cli.ts  (+1 more)
(+78 files in other folders)
